success add swagger golang and update some error code
