# docs/swagger.json
@@ -34,13 +34,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     }
                 }
@@ -77,13 +77,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     }
                 }
@@ -109,7 +109,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.LoginAdmin"
+                            "$ref": "#/definitions/entities.LoginAdmin"
                         }
                     }
                 ],
@@ -117,25 +117,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     }
                 }
@@ -161,7 +161,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.RegisterAdmin"
+                            "$ref": "#/definitions/entities.RegisterAdmin"
                         }
                     }
                 ],
@@ -169,19 +169,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     }
                 }
@@ -218,13 +218,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/admin.Invoice"
+                            "$ref": "#/definitions/entities.Invoice"
                         }
                     }
                 }
@@ -261,13 +261,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/admin.Admin"
+                            "$ref": "#/definitions/entities.Admin"
                         }
                     }
                 }
@@ -275,7 +275,7 @@
         }
     },
     "definitions": {
-        "admin.Admin": {
+        "entities.Admin": {
             "type": "object",
             "required": [
                 "email",
@@ -301,7 +301,7 @@
                 }
             }
         },
-        "admin.Invoice": {
+        "entities.Invoice": {
             "type": "object",
             "properties": {
                 "buyer_email": {
@@ -339,7 +339,7 @@
                 }
             }
         },
-        "admin.LoginAdmin": {
+        "entities.LoginAdmin": {
             "type": "object",
             "required": [
                 "id_pegawai",
@@ -354,7 +354,7 @@
                 }
             }
         },
-        "admin.RegisterAdmin": {
+        "entities.RegisterAdmin": {
             "type": "object",
             "required": [
                 "email",
